# cmake_test

./: README.md
scripts/: build.sh  install_dep.sh  test.sh
src/: CMakeLists.txt  MyStrategy.cpp  MyStrategy.hpp  Stream.cpp  Stream.hpp  TcpStream.cpp  TcpStream.hpp  main.cpp
src/model/: Action.cpp  Action.hpp  AttackAction.cpp  AttackAction.hpp  AttackProperties.cpp  AttackProperties.hpp  AutoAttack.cpp  AutoAttack.hpp  BuildAction.cpp  BuildAction.hpp  BuildProperties.cpp  BuildProperties.hpp  Camera.cpp  Camera.hpp  ClientMessage.cpp  ClientMessage.hpp  Color.cpp  Color.hpp  ColoredVertex.cpp  ColoredVertex.hpp  DebugCommand.cpp  DebugCommand.hpp  DebugData.cpp  DebugData.hpp  DebugState.cpp  DebugState.hpp  Entity.cpp  Entity.hpp  EntityAction.cpp  EntityAction.hpp  EntityProperties.cpp  EntityProperties.hpp  EntityType.hpp  Model.hpp  MoveAction.cpp  MoveAction.hpp  Player.cpp  Player.hpp  PlayerView.cpp  PlayerView.hpp  (+11 more)
tests/: CMakeLists.txt
tests/my_class/: my_class_test.cmake  my_class_test.cpp  my_class_test.h
